# aws-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
analyzer/: __init__.py  __main__.py  analyzer.py  cli.py
analyzer/detections/: __init__.py  overpermissioned.py  privilege_escalation.py  service_account_behavior.py  stale_keys.py  trust_policy_risks.py
analyzer/ingest/: __init__.py  cloudtrail_loader.py  iam_loader.py
analyzer/models/: __init__.py  finding.py  identity.py  policy.py
analyzer/reporting/: __init__.py  json_report.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_loaders.py  test_models.py  test_overpermissioned.py  test_stale_keys.py  test_trust_policies.py
